# A3X2

./: .coverage  .gitignore  AGENTS.md  QWEN.md  README.md  SYSTEM_OVERVIEW.md  VALIDATION_README.md  demo_emergent_intelligence.py  demo_validation.py  demonstration_script.py  executor.py  final_demonstration.py  forge.yaml  patch.py  pyproject.toml  run_autopilot_demo.py  simulate_patch_improvement.py  start_autonomous_evolution.py  start_autopilot.py  targeted_patch_improvement.py  test_a3x.txt  test_calculator_original.py  test_hints.py  test_test_calculator.py  validate_autonomous_system.py
a3x/: __init__.py  __main__.py  actions.py  agent.py  autoeval.py  autoloop.py  autonomous_goal_config.py  autonomous_goal_generator.py  autonomous_monetization.py  autonomous_planner.py  capabilities.py  capability_metrics.py  change_log.py  cli.py  config.py  constants.py  continuous_evolution_daemon.py  data_analysis.py  dynamic_scaler.py  emergent_intelligence.py  executor.py  executor.py.backup  hierarchical_planner.py  history.py  llm.py  llm_seed_strategist.py  meta_capabilities.py  meta_recursion.py  metrics.py  patch.py  performance_benchmark.py  planner.py  policy.py  report.py  seed_daemon.py  seed_runner.py  seeds.py  self_directed_evolution.py  skills_registry.py  testgen.py  (+1 more)
configs/: README.md  README.md.orig  agent.py  agent.py.orig  basic_test.py  basic_test.py.bak  basic_test.py.orig  calculator_improvement.yaml  capabilities.yaml  doc.md  example.py  manual.yaml  patch.py  patch.py.bak  policy_overrides.yaml  pyproject.toml  sample.yaml  sample_goals.yaml  seed_autonomous_goals.yaml  seed_data_curriculum.yaml  seed_diff_curriculum.yaml  seed_diff_curriculum_step2.yaml  seed_diff_curriculum_step3.yaml  (+15 more)
(+414 files in other folders)
