[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a3x"
version = "0.1.0"
description = "Ferramenta CLI para orquestrar um agente autônomo de codificação local"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "A3X", email = "dev@a3x.local"}
]
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "httpx>=0.27"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
  "black>=24.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "hypothesis>=6.95",
  "matplotlib>=3.8"
]
memory = [
    "sentence-transformers>=2.2.0"
]

[project.scripts]
a3x = "a3x.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "UP", "B", "Q", "W", "T20", "ARG", "PTH"]
ignore = ["E501"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.isort]
known-first-party = ["a3x"]
